<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="search">Поиск</string>
    <string name="mediateka">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dark_theme">Тёмная тема</string>
    <string name="share">Поделиться приложением</string>
    <string name="help">Написать в поддержку</string>
    <string name="agreement">Пользовательское соглашение</string>
    <string name="practicum_url">https://practicum.yandex.ru/android-developer/</string>
    <string name="thanks">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="subject">Написать в поддержку</string>
    <string name="email">artem.s.grigorash@gmail.com</string>
    <string name="legal_url">https://yandex.ru/legal/practicum_offer/</string>
    <string name="something_went_wrong">Проблемы со связью \n \n Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="nothing_found">Ничего не найдено!</string>
    <string name="reload">Обновить</string>
    <string name="you_searched">Вы искали</string>
    <string name="clean_history">Очистить историю</string>
    <string name="length">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="start_time">00:00</string>
    <string name="empty_tracks">Ваша медиатека пуста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="empty_playlist">Вы не создали\nни одного плейлиста</string>
    <string name="nothing_searched_yet">Ваша медиатека пуста</string>
    <string name="playlist_name">Название*</string>
    <string name="playlist_description">Описание</string>
    <string name="tracks">треков</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>