<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="15dp"
    android:background="@color/white">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:textColor="@color/classic_text"
            android:textSize="@dimen/header_text"
            android:paddingLeft="50dp"
            android:fontFamily="@font/ys_display_medium"/>

        <ImageView
            android:id="@+id/settings_back"
            android:layout_width="25dp"
            android:layout_height="30dp"
            android:paddingTop="10dp"
            app:srcCompat="@drawable/array_back"
            app:tint="@color/classic_text" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dark_theme"
            android:layout_gravity="center_vertical"
            style="@style/ClassicTextStyle"
            />
        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            style="@style/SettingsPicturesStyle"
            />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share"
            android:layout_gravity="center_vertical"
            style="@style/ClassicTextStyle"
            />

        <ImageView
            android:layout_height="match_parent"
            android:layout_gravity="end"
            app:srcCompat="@drawable/share"
            app:tint="@color/icons_tint"
            style="@style/SettingsPicturesStyle"/>
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help"
            android:layout_gravity="center_vertical"
            style="@style/ClassicTextStyle"
            />

        <ImageView
            android:layout_height="match_parent"
            android:layout_gravity="end"
            app:srcCompat="@drawable/support"
            app:tint="@color/icons_tint"
            style="@style/SettingsPicturesStyle"/>
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/agreement"
            android:layout_gravity="center_vertical"
            style="@style/ClassicTextStyle"
            />
        <ImageView
            android:layout_height="match_parent"
            android:layout_gravity="end"
            app:srcCompat="@drawable/array_forward"
            app:tint="@color/icons_tint"
            style="@style/SettingsPicturesStyle"/>
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6">

    </FrameLayout>


</LinearLayout>