<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_dark"
    android:orientation="vertical">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/mainPart"
        android:background="@color/white_dark">


        <ImageView
            android:id="@+id/trackPicture"
            android:layout_width="312dp"
            android:layout_height="312dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="82dp"

            android:layout_marginEnd="24dp"
            android:layout_marginBottom="446dp"
            android:scaleType="centerCrop"
            app:layout_constraintDimensionRatio="h,1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/tracks_place_holder" />

        <ImageView
            android:id="@+id/arrayBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:visibility="visible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/array_back"
            app:tint="@color/classic_text" />


        <TextView
            android:id="@+id/country"
            style="@style/LittleTextStyleGray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="188dp"
            android:text="@string/country"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_track_button" />

        <TextView
            android:id="@+id/country_value"
            style="@style/LittleTextStyleBlack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="188dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/like_button"
            tools:text="Russia" />

        <TextView
            android:id="@+id/genre"
            style="@style/LittleTextStyleGray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginBottom="16dp"
            android:text="@string/genre"
            app:layout_constraintBottom_toTopOf="@+id/country"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/year"
            style="@style/LittleTextStyleGray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginBottom="16dp"
            android:text="@string/year"
            app:layout_constraintBottom_toTopOf="@+id/genre"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/album"
            style="@style/LittleTextStyleGray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginBottom="16dp"
            android:text="@string/album"
            app:layout_constraintBottom_toTopOf="@+id/year"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/time_of_track"
            style="@style/LittleTextStyleGray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="59dp"
            android:layout_marginBottom="16dp"
            android:text="@string/length"
            app:layout_constraintBottom_toTopOf="@+id/album"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/play_button" />

        <TextView
            android:id="@+id/genre_value"
            style="@style/LittleTextStyleBlack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/country_value"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="Rock" />

        <TextView
            android:id="@+id/year_value"
            style="@style/LittleTextStyleBlack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/genre_value"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="2018" />

        <TextView
            android:id="@+id/album_value"
            style="@style/LittleTextStyleBlack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/year_value"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="Super album" />

        <TextView
            android:id="@+id/time_of_track_value"
            style="@style/LittleTextStyleBlack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="59dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/album_value"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/play_button"
            tools:text="5:12" />

        <TextView
            android:id="@+id/name_of_track"
            style="@style/HeaderStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/trackPicture"
            tools:text="Name of track" />

        <TextView
            android:id="@+id/author_of_track"
            style="@style/PlaceHolderStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="12dp"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name_of_track"
            tools:text="Author" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/play_button"
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:layout_marginStart="130dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="130dp"
            android:backgroundTint="@color/white_dark"
            android:clickable="true"
            android:foregroundGravity="center"
            app:backgroundTint="@color/classic_text"
            app:borderWidth="2dp"
            app:fabCustomSize="85dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/author_of_track"
            app:maxImageSize="85dp"
            app:srcCompat="@drawable/play"
            app:tint="@color/classic_text" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/add_track_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="55dp"
            android:backgroundTint="@color/text_gray"
            android:clickable="true"
            android:foregroundGravity="center"
            app:backgroundTint="@color/button_white"
            app:borderWidth="0dp"
            app:fabCustomSize="50dp"
            app:layout_constraintBottom_toBottomOf="@+id/play_button"
            app:layout_constraintEnd_toStartOf="@+id/play_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/play_button"
            app:maxImageSize="50dp"
            app:srcCompat="@drawable/add_track"
            app:tint="@color/button_white" />

        <ImageView
            android:id="@+id/like_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="55dp"
            android:layout_marginEnd="24dp"
            android:clickable="true"
            android:foregroundGravity="center"
            app:borderWidth="0dp"
            app:fabCustomSize="50dp"
            app:layout_constraintBottom_toBottomOf="@+id/play_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/play_button"
            app:layout_constraintTop_toTopOf="@+id/play_button"
            app:maxImageSize="50dp"
            app:srcCompat="@drawable/like" />

        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/LittleTextStyleBlack"
            android:layout_marginTop="8dp"
            android:text="@string/start_time"
            app:layout_constraintEnd_toEndOf="@+id/play_button"
            app:layout_constraintStart_toStartOf="@+id/play_button"
            app:layout_constraintTop_toBottomOf="@+id/play_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View android:id="@+id/overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#99000000"
        android:visibility="gone"/>

    <LinearLayout
        android:id="@+id/standard_bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/rounded_corners"
        android:orientation="vertical"
        android:paddingHorizontal="16dp"
        app:behavior_hideable="true"
        app:behavior_peekHeight="240dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <View
            android:layout_width="60dp"
            android:layout_height="4dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/gray_smth"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="20dp"
            android:text="Добавить в плейлист"
            android:textStyle="bold"
            style="@style/ClassicTextStyle"/>

        <Button
            android:id="@+id/new_playlist"
            style="@style/ReloadTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:backgroundTint="@color/classic_text"
            android:clickable="true"
            android:textAllCaps="false"
            android:text="@string/new_playlist"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/historyList"
            android:layout_width="match_parent"
            android:paddingTop="20dp"
            android:layout_height="match_parent"
            tools:listitem="@layout/small_playlist_view"/>

    </LinearLayout>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragment_container_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />

</androidx.coordinatorlayout.widget.CoordinatorLayout>